--- a/Model.ipynb
+++ b/Model.ipynb
@@ -4,51 +4,26 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mRunning cells with '.conda (Python 3.12.9)' requires the ipykernel package.\n",
-      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-      "\u001b[1;31mCommand: 'conda install -p /Users/mouhcine/Desktop/MentalBert /.conda ipykernel --update-deps --force-reinstall'"
-     ]
-    }
-   ],
-   "source": [
-    "! pip install transformers\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mRunning cells with '.conda (Python 3.12.9)' requires the ipykernel package.\n",
-      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-      "\u001b[1;31mCommand: 'conda install -p /Users/mouhcine/Desktop/MentalBert /.conda ipykernel --update-deps --force-reinstall'"
-     ]
-    }
-   ],
-   "source": [
-    "conda install -p /Users/mouhcine/Desktop/MentalBert /.conda ipykernel --update-deps --force-reinstall"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "mentalbert",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.9"
   }
  },
